--- a/RwaApartments-Public/Views/Shared/_ReviewView.cshtml
+++ b/RwaApartments-Public/Views/Shared/_ReviewView.cshtml
@@ -14,7 +14,7 @@
         <div class="col-sm">
             <div class="row h-50">
                 <div class="col-md-auto">
-                    <h5 style="width:fit-content">@Model.User.UserName</h5>
+                    <h5 style="width:fit-content">@Model.User.FullName</h5>
                     <div class="mb-3">
                         @Html.Partial("_StarsView", model: starsViewModel)
                     </div>
