--- a/RwaApartments-Public/Views/Apartments/ViewApartment.cshtml
+++ b/RwaApartments-Public/Views/Apartments/ViewApartment.cshtml
@@ -10,7 +10,17 @@
     };
     ContactReservationViewModel contactViewModel = new ContactReservationViewModel
     {
-        User = Model.LoggedUser,
+        User = new RwaApartmaniDataLayer.Models.User()
+        {
+            UserName = "lkruslin@racunarstvo.hr",
+            Email = "lkruslin@racunarstvo.hr",
+            FullName = "Leon Kruslin",
+            Id = "1",
+            Guid = new Guid(),
+            CreatedAt = DateTime.Now,
+            UpdatedTime = DateTime.Now,
+            CreatedTime = DateTime.Now
+        },
         StartTime = DateTime.Now,
         EndTime = DateTime.Now
     };
