--- a/RwaApartments-Public/Views/Apartments/ViewApartment.cshtml
+++ b/RwaApartments-Public/Views/Apartments/ViewApartment.cshtml
@@ -8,12 +8,6 @@
         TotalReviews = Model.Apartment.TotalReviews,
         ShowTotalReviews = false
     };
-    ContactReservationViewModel contactViewModel = new ContactReservationViewModel
-    {
-        User = Model.LoggedUser,
-        StartTime = DateTime.Now,
-        EndTime = DateTime.Now
-    };
     var reviews = Model.Apartment.Reviews.Reverse();
 }
 
@@ -83,7 +77,7 @@
         </div>
         <div class="row mt-3">
             <div class="mb-2">
-                <b><span style="height:fit-content"><img src="~/Content/images/location_red.png" style="position: relative; top: -2px;" class="icon" />@Model.Apartment.City.Name</span></b>
+                <b><span style="height:fit-content"><img src="/Content/images/location_red.png" style="position: relative; top: -2px;" class="icon" />@Model.Apartment.City.Name</span></b>
             </div>
             <div>
                 <span>@Model.Apartment.Address</span>
@@ -118,10 +112,12 @@
         </div>
         <div class="row mt-3">
             <div class="col-sm">
-                @if (Model.Apartment.IsAvaliable)
-                {
-                    @Html.Partial("_ContactReservation", contactViewModel)
-                }
+                @*@if (Model.Apartment.IsAvaliable)
+                {*@
+                    @*<h1>HEhe</h1>*@
+                    @*@Html.Partial("_ContactReservation", contactViewModel)*@
+                    @*//}*@
+                @{Html.RenderAction("LoadContactReservationPartial", "Apartments");}
             </div>
         </div>
         <div class="row mt-3">
