--- a/RwaApartments-Public/Views/Shared/_Layout.cshtml
+++ b/RwaApartments-Public/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                     }
                     <li class="nav-item">
                         <span class="nav-link">
-                            @HttpContext.Current.User.Identity.Name
+                            @Html.ActionLink($"{HttpContext.Current.User.Identity.Name}", "ViewUser", null, new { @class = "nav-link"})
                         </span>
                     </li>
                 </ul>
