Login and logout completely operational

--- a/RwaApartments-Public/Views/Apartments/Index.cshtml
+++ b/RwaApartments-Public/Views/Apartments/Index.cshtml
@@ -9,23 +9,22 @@
     @using (Html.BeginForm("Index", "Apartments", null, FormMethod.Post, new { role = "form" }))
     {
         @Html.AntiForgeryToken()
-        @Html.ValidationSummary(true, "")
         <div class="mb-3">
             @Html.LabelFor(m => m.Email)
             @Html.TextBoxFor(m => m.Email)
-            @Html.ValidationMessageFor(m => m.Email, "")
         </div>
         <div class="mb-3">
             @Html.LabelFor(m => m.Password)
             @Html.PasswordFor(m => m.Password)
-            @Html.ValidationMessageFor(m => m.Password)
         </div>
-        @*<div class="mb-3 form-check">
-            @Html.LabelFor(m => m.Password)
-            @Html.PasswordFor(m => m.Password)
-            @Html.ValidationMessageFor(m => m.Password)
-        </div>*@
         <button type="submit" class="btn btn-danger">Submit</button>
+        if(!ViewData.ModelState.IsValid)
+        {
+            <div class="alert alert-danger">
+                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                @Html.ValidationSummary()
+            </div>
+        }
     }
 </div>
 
